# educational-rag-chatbot

./: .gitignore  Makefile  README.md  pyproject.toml
backend/: main.py  pyproject.toml
backend/clients/: __init__.py  database.py  llm.py  minio.py  vector_store.py
backend/core/: config.py  dependencies.py
backend/libs/: __init__.py
backend/libs/langchain/: __init__.py  chains.py  embeddings.py  loaders.py  messages.py  models.py  prompts.py  retrievers.py  text_splitters.py  tools.py  vector_stores.py
backend/libs/langgraph/: __init__.py  agents.py  state.py  tools.py  workflows.py
backend/routers/: __init__.py  chat.py  documents.py
backend/schemas/: __init__.py  chat.py  common.py  document.py
backend/services/: __init__.py  rag.py  vector_store.py
backend/tests/data/: retriever_test_docs.py
backend/tests/libs/langchain/: loaders.py  models.py  retrievers.py  text_splitters.py  vector_stores.py
backend/tests/services/: __init__.py  rag_integration.py
backend/utils/: decorators.py
docs/: dev.md  index.md  plan.md  prd.md  setup.md  system-design.md
docs/html/: plan.html  prd.html  system-design.html
docs/misc/references/: langchain.md
frontend/: package-lock.json  package.json
frontend/src/hooks/: use-api.ts
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
infra/docker/: docker-compose.yaml
prisma/: schema.prisma
prisma/migrations/20250727021032_init/: migration.sql
prisma/migrations/20250727031604_init/: migration.sql
