[project]
name = "heyhi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "langchain[openai]>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langgraph>=0.5.4",
    "minio>=7.2.16",
    "openai>=1.97.1",
    "prisma>=0.15.0",
    "qdrant-client>=1.15.0",
    "typing>=3.10.0.0",
    "langchain-qdrant>=0.2.0",
    "pymupdf>=1.26.3",
    # Development and Jupyter dependencies
    "ipykernel>=6.30.0",
    "jupyter>=1.1.1",
    "pip>=25.1.1",
    "langchain-openai>=0.3.28",
    "langchain-text-splitters>=0.3.9,<0.4.0",
    "ragas>=0.3.0",
    "rank-bm25>=0.2.2",
    "chromadb>=1.0.15",
    "langchain-experimental>=0.3.4",
    "lxml>=6.0.0",
    "tiktoken>=0.9.0",
    "spacy>=3.8.7",
    "nltk>=3.9.1",
    "sentence-transformers>=5.0.0",
]
